show images in the page

--- a/StockRoom.Web/framework/views/Main/Index.html
+++ b/StockRoom.Web/framework/views/Main/Index.html
@@ -1,11 +1,10 @@
 ﻿<table cellspacing="1" cellpadding="3" style="width: 100%;" id="dataAdminList">
 
-    <tr><td>332</td></tr>
     <!-- BEGIN list -->
     <tr class="tableItems">
-        <td style="width:40px;">#{teacher.RoomId}</td>
+        <!--<td style="width:40px;">#{teacher.RoomId}</td>-->
         <td style="width:140px;">#{teacher.AddTime}</td>
-        <td>#{teacher.MessageInfo}</td>
+        <td>#{Content}</td>
     </tr>
     <!-- END list -->
 </table>
