--- a/StockRoom.Web/framework/views/Main/Show.html
+++ b/StockRoom.Web/framework/views/Main/Show.html
@@ -2,8 +2,8 @@
 
     <!-- BEGIN list -->
     <tr class="tableItems">
-        <td style="width:120px;">#{teacher.AddTime}</td>
-        <td>#{teacher.MessageInfo}</td>
+        <td style="width:140px;">#{teacher.AddTime}</td>
+        <td>#{Content}</td>
     </tr>
     <!-- END list -->
 </table>
