--- a/StockRoom.Web/framework/views/History/Index.html
+++ b/StockRoom.Web/framework/views/History/Index.html
@@ -2,8 +2,8 @@
 
     <!-- BEGIN list -->
     <tr class="tableItems">
-        <td>#{teacher.RoomId}</td>
-        <td style="width:140px;">#{teacher.CreatedDateTime}</td>
+        <td style="width:140px;">#{teacher.RoomId}</td>
+        <td>#{teacher.CreatedDateTime}</td>
     </tr>
     <!-- END list -->
 </table>
