add refresh page

--- a/StockRoom.Web/framework/views/Layout/Layout.html
+++ b/StockRoom.Web/framework/views/Layout/Layout.html
@@ -7,6 +7,14 @@
 <link href="~css/wojilu._common.css?v=#{cssVersion}" rel="stylesheet" type="text/css" />
 <link href="~css/wojilu.cms.css?v=#{cssVersion}" rel="stylesheet" type="text/css" />
 <script>var __funcList = []; var _run = function (aFunc) { __funcList.push(aFunc); }; var require = { urlArgs: 'v=#{jsVersion}' };</script>
+    <script type="text/javascript">
+        function refresh() {
+            setTimeout(function () {
+                location.reload()
+            }, 10000);
+        }
+        refresh();
+    </script>
 </head>
 
 <body>
