add history page

--- a/StockRoom.Web/framework/views/History/Index.html
+++ b/StockRoom.Web/framework/views/History/Index.html
@@ -3,7 +3,7 @@
     <!-- BEGIN list -->
     <tr class="tableItems">
         <td style="width:140px;">#{teacher.RoomId}</td>
-        <td>#{teacher.CreatedDateTime}</td>
+        <td><a href="#{roomLink}">#{teacher.CreatedDateTime}</a></td>
     </tr>
     <!-- END list -->
 </table>
