add reply message

--- a/StockRoom.Web/framework/views/Main/Index.html
+++ b/StockRoom.Web/framework/views/Main/Index.html
@@ -4,7 +4,9 @@
     <tr class="tableItems">
         <!--<td style="width:40px;">#{teacher.RoomId}</td>-->
         <td style="width:140px;">#{teacher.AddTime}</td>
-        <td>#{Content}</td>
+        <td>
+        <div>#{Content}</div>
+        </td>
     </tr>
     <!-- END list -->
 </table>
